--- a/cmp-databinding-start/src/app/server-form/server-form.component.html
+++ b/cmp-databinding-start/src/app/server-form/server-form.component.html
@@ -8,9 +8,9 @@
       <br>
       <button
         class="btn btn-primary"
-        (click)="onAddServer()">Add Server</button>
+        (click)="onAddServerFromForm()">Add Server</button>
       <button
         class="btn btn-primary"
-        (click)="onAddBlueprint()">Add Server Blueprint</button>
+        (click)="onAddBlueprintFromForm()">Add Server Blueprint</button>
     </div>
   </div>
