added local reference and lifecycle hooks

--- a/cmp-databinding-start/src/app/server-form/server-form.component.html
+++ b/cmp-databinding-start/src/app/server-form/server-form.component.html
@@ -4,12 +4,13 @@
       <label>Server Name</label>
       <!-- <input type="text" class="form-control" [(ngModel)]="newServerName"> -->
       <input type="text" class="form-control" #serverNameInput>
-      <label>Server Content</label>
+      <label>Server Content</label>      
+      <!-- <input type="text" class="form-control" [(ngModel)]="newServerContent"> -->
       <input type="text" class="form-control" #serverContentInput>
       <br>
       <button
         class="btn btn-primary"
-        (click)="onAddServerFromForm(serverNameInput, serverContentInput)">Add Server</button>
+        (click)="onAddServerFromForm(serverNameInput)">Add Server</button>
       <button
         class="btn btn-primary"
         (click)="onAddBlueprintFromForm(serverNameInput, serverContentInput)">Add Server Blueprint</button>
