removed unnecessary hooks and added ng-content hook to render part of server element component

--- a/cmp-databinding-start/src/app/app.component.html
+++ b/cmp-databinding-start/src/app/app.component.html
@@ -3,7 +3,12 @@
   <hr>
   <div class="row">
     <div class="col-xs-12">
-      <app-server-element *ngFor="let serverItem of serverElements" [element]="serverItem"></app-server-element>
+      <app-server-element *ngFor="let serverItem of serverElements" [element]="serverItem">
+        <p>
+          <strong *ngIf="serverItem.type === 'server'" style="color: red">{{ serverItem.content }}</strong>
+          <em *ngIf="serverItem.type === 'blueprint'">{{ serverItem.content }}</em>
+        </p>
+      </app-server-element>
     </div>
   </div>
 </div>
