--- a/cmp-databinding-start/src/app/game-control/game-control.component.html
+++ b/cmp-databinding-start/src/app/game-control/game-control.component.html
@@ -1,1 +1,7 @@
-<p>game-control works!</p>
+<div class="row">
+    <div class="col">
+        <button class="btn btn-success" (click)="startGame()">Start</button>
+        <button class="btn btn-danger" (click)="stopGame()">Stop</button>
+        <h1>{{ score }}</h1>
+    </div>
+</div>
