--- a/cmp-databinding-start/src/app/odd/odd.component.html
+++ b/cmp-databinding-start/src/app/odd/odd.component.html
@@ -1,3 +1,3 @@
-<ul [ngStyle]="{display: 'inline-block', 'list-style-type': 'none'}">
+<ul [ngStyle]="{'display': 'inline-block', 'list-style-type': 'none', 'color': 'blue'}">
     <li>{{currentOddNum}}</li>
 </ul>
